# printer_bot

./: .gitignore  README.md  pyproject.toml  secrets.json.template
src/printer_bot/: main.py
